use common from cdn, add img

--- a/javascript/maze.html
+++ b/javascript/maze.html
@@ -2,8 +2,8 @@
 	<head>
 		<meta charset="UTF-8"/>
 		<title></title>
-		<script type="text/javascript" src="http://underscorejs.org/underscore-min.js"></script>
-		<script type="text/javascript" src="http://code.jquery.com/jquery-1.9.0.min.js"></script>
+		<script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.4.3/underscore-min.js"></script>
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
 	</head>
 	<body style="margin:0;padding:0">
 		<div style="margin: 10px 0 0 10px;">
@@ -15,7 +15,7 @@
 			time: <span id="id-timer">00:00</span>
 		</div>
 		<canvas id="id-canvas" width="960" height="960"> </canvas>
-		<img id="id-man" src="http://minerealm.com/community/images/smilies/icon_e_smile.gif" alt="" style="position: relative;height:6px; width: 6px;" />
+		<img id="id-man" src="img/icon_e_smile.gif" alt="" style="position: relative;height:6px; width: 6px;" />
 		<script type="text/javascript" src="js/maze.js"> </script>
 	</body>
 </html>
