--- a/javascript/maze.html
+++ b/javascript/maze.html
@@ -1,7 +1,7 @@
 <html>
 	<head>
 		<meta charset="UTF-8"/>
-		<title></title>
+		<title>LB-Maze</title>
 		<script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.4.3/underscore-min.js"></script>
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
 	</head>
