--- a/javascript/maze.html
+++ b/javascript/maze.html
@@ -6,7 +6,7 @@
     <script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.4.3/underscore-min.js"></script>
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
   </head>
-  <body style="margin:0;padding:0">
+  <body style="margin:0;padding:0; width:960px;">
     <div style="margin: 10px 0 0 10px;">
       Map Size:
       <select name="mapsize" id="id-mapsize">
@@ -22,7 +22,7 @@
       <br />
       time: <span id="id-timer">00:00</span>
     </div>
-    <canvas id="id-canvas" width="960" height="960"> </canvas>
+    <canvas id="id-canvas" width="950" height="950"> </canvas>
     <img id="id-man" src="img/icon_e_smile.gif" alt="" style="position: relative;height:6px; width: 6px;" />
     <script type="text/javascript" src="js/maze.js"> </script>
   </body>
