--- a/javascript/maze.html
+++ b/javascript/maze.html
@@ -22,8 +22,12 @@
       <br />
       time: <span id="id-timer">00:00</span>
     </div>
-    <canvas id="id-canvas" width="950" height="950"> </canvas>
-    <img id="id-man" src="img/icon_e_smile.gif" alt="" style="position: relative;height:6px; width: 6px;" />
+    <div>
+      <canvas id="id-canvas" width="950" height="950"> </canvas>
+    </div>
+    <div>
+      <img id="id-man" src="img/icon_e_smile.gif" alt="" style="position: relative;height:6px; width: 6px;" />
+    </div>
     <script type="text/javascript" src="js/maze.js"> </script>
   </body>
 </html>
