--- a/javascript/maze.html
+++ b/javascript/maze.html
@@ -6,7 +6,7 @@
     <script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.4.3/underscore-min.js"></script>
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
   </head>
-  <body style="margin:0;padding:0; width:960px;">
+  <body style="margin:0;padding:0;">
     <div style="margin: 10px 0 0 10px;">
       Map Size:
       <select name="mapsize" id="id-mapsize">
